--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+$ghost-white: #F7F5FB;
 $base-background: #F7F5FB;
 $smoke-green: #F9AB55;
 $dark-orange: #F58A07;
@@ -9,7 +9,7 @@ $wild-blue: #909CC2;
 
 .column {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 
 }
 
@@ -17,4 +17,9 @@ html, body { height: 100%; }
 body {
   margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
   background-color: $base-background;
+}
+
+@font-face {
+  font-family: Jersey;
+  src: url(/assets/JerseyM54-aLX9.ttf);
 }
